--- a/src/Views/Transacao/Cadastro.cshtml
+++ b/src/Views/Transacao/Cadastro.cshtml
@@ -30,10 +30,10 @@
             <input type="text" id="txtHistorico" class="form-control" asp-for="Histórico" />
         </div>
         
-        <div class="mb-3">
+        @* <div class="mb-3">
             <label>@Html.RadioButtonFor(m => m.Tipo, "D") Despesa </label>
             <label>@Html.RadioButtonFor(m => m.Tipo, "R") Receita </label>
-        </div>
+        </div> *@
 
         <div class="mb-3">
             <button type="submit" class="btn btn-primary btn-lg">Salvar</button>
